<resources>
    <string name="app_name">filmbox-front</string>
    <string name="filmbox">FilmBox</string>
    <string name="nombre_label">Nombre:</string>
    <string name="contrasena_label">Contraseña:</string>
    <string name="account_text">Ya tienes cuenta?</string>
    <string name="login_button_text">Iniciar Sesión</string>
    <string name="no_account_text">Aún no tienes cuenta?</string>
    <string name="register_button_text">Registrarse</string>
    <string name="filmbox_icon_desc">FilmBox Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>